DB connection was fixed